# Transformo

./: .gitignore  README.md  environment-dev.yml  environment.yml  mkdocs.yml  pyproject.toml  zensical.toml
.github/workflows/: docs.yml  testsuite.yml
docs/: developing.md  index.md  install.md
docs/about/: architecture.md  examples.md  install.md  usage.md  usecases.md
docs/contributing/: developing.md  documentation.md  index.md
docs/datasources/: bernese_crd.md  csv.md  index.md
docs/operators/: helmert3param.md  helmert7param.md  helmert7param_small_angle.md  helmert7paramnonlinear.md  helmerttranslation.md  index.md  projoperator.md
docs/presenters/: coordinate_presenter.md  datasource_presenter.md  index.md  proj_presenter.md  residual_presenter.md  topocentricresidual_presenter.md
examples/: bernese_crd_files.yaml  datasource_overrides.yaml  multiple_transformation_steps.yaml
src/transformo/operators/: __init__.py  helmert.py
test/: test_pipeline.py
test/operators/: test_helmert.py
test/presenters/: test_proj.py
