[build-system]
requires = [
    'wheel',
    'setuptools>=43.0.0',
]
build-backend = 'setuptools.build_meta'

[project]
name = 'transformo'
version = '0.3.0'
description = 'Transformo - The general purpose tool for determining geodetic transformations'
readme = 'README.md'
license = 'MIT'
license-files = ['LICENSE']
requires-python = '>=3.11'
authors = [
    {name = 'Kristian Evers', email = 'kreve@kds.dk'},
]
classifiers = [
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Programming Language :: Python :: 3.14',
]
dependencies = [
    'click>=8.1',
    'numpy>=2.0',
    'pandoc>=2.4',
    'pydantic>=2.8',
    'pydantic-yaml>=1.3',
    'py-markdown-table>=1.3',
    'pyproj>=3.7',
    'pyyaml>=6.0',
    'rich>=13.9',
    'scipy>=1.16',
]

[project.optional-dependencies]
dev = [
    'pytest',
    'black',
    'pylint',
    'pre-commit',
    'mypy',
    'isort',
    'zensical',
    'markdown-exec',
]

[project.scripts]
transformo = 'cli.entries:main'

[project.urls]
Documentation = 'https://transformo.xyz'
Repository = 'https://github.com/NordicGeodesy/transformo'
Tracker = 'https://github.com/NordicGeodesy/transformo/issues'

[tool.setuptools.packages.find]
where = ['src', 'src/transformo']

[tool.setuptools.package-data]
cli = ['style.css']

[tool.mypy]
mypy_path = 'src/'
packages = ['transformo']
plugins = ['numpy.typing.mypy_plugin', 'pydantic.mypy']
incremental = false
disable_error_code = 'import-untyped'

[tool.black]
include = '\.pyi?$'

[tool.isort]
profile = 'black'

[tool.pylint.main]
py-version = '3.14'
source-roots = ['src/transformo']

[tool.pylint.format]
max-line-length = 88

[tool.pytest.ini_options]
filterwarnings = [
    # Using Python 3.14+ with pydantic_yaml 1.6 results in a UserWarning
    # due to use of Pydantic V1 features. Doesn't seem to affect Transformo,
    # so we ignore it
    "ignore::UserWarning:pydantic_yaml._internals.v2",
]
